--- a/saludconciencia/src/sass/_paraTi.scss
+++ b/saludconciencia/src/sass/_paraTi.scss
@@ -19,6 +19,11 @@ $fs-600: 3rem;
     --fs-reviewCard-name: 2.5rem;
     --fs-reviewCard-occupation: 1.7rem;
     --fs-reviewCard-review: 1.5rem;
+
+    // --fs-slide3-title: clamp(3rem, 5rem, 6rem);
+    // --fs-slide3-info: clamp(1rem, 3rem, 3rem);
+    --fs-slide3-title: 5rem;
+    --fs-slide3-info: 3rem;
 }
 
 .paraTi__slide1{
@@ -157,7 +162,63 @@ $fs-600: 3rem;
     }
 }
 
-.paraTi__slide3{}
+.paraTi__slide3{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    height: 100vh;
+    //padding-top: 25vh;
+    margin: 20rem 0;
+    &__card{
+        height: auto;
+        flex: 0 0 23%;
+        //width: 23%;
+        margin-top: 10vh;
+
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        &:hover{
+            box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
+            border-radius: 50px;
+        }
+
+        &-fig{
+            width: 80%;
+            height: auto;
+            margin: 0 auto;
+            margin-bottom: 2rem;
+        }
+
+        &-img{
+            width: 100%;
+            height: auto;
+        }
+
+        &-titleGreen{
+            color: $color_text_green;
+            font-size: var(--fs-slide3-title);
+        }
+        &-titleBlack{
+            color: $color_text_dark;
+            font-size: var(--fs-slide3-title);
+        }
+        &-titleBlue{
+            color: $color_text_blue;
+            font-size: var(--fs-slide3-title);
+        }
+
+        &-info{
+            color: hsl(0, 0%, 30%);
+            font-size: var(--fs-slide3-info);
+            width: 80%;
+            margin: auto auto;
+        }
+    }
+}
 
 .paraTi__slide4{
     display: flex;
@@ -372,6 +433,8 @@ $fs-600: 3rem;
         --fs-reviewCard-occupation: 1.7rem;
         --fs-reviewCard-review: 1.8rem;
         --fs-slide5: 5vw;
+        --fs-slide3-title: 4rem;
+        --fs-slide3-info: 2.5rem;
     }
 }
 @media screen and (max-width: 1200px){
@@ -380,6 +443,8 @@ $fs-600: 3rem;
         --fs-reviewCard-occupation: 1.7rem;
         --fs-reviewCard-review: 1.8rem;
         --fs-slide5: 5vw;
+        --fs-slide3-title: 3.6rem;
+        --fs-slide3-info: 2.2rem;
     }
 }
 @media screen and (max-width: 992px){
