Agregados Links y scroll to top en Blogs.

--- a/saludconciencia/src/sass/_footer.scss
+++ b/saludconciencia/src/sass/_footer.scss
@@ -204,6 +204,9 @@
                         fill: url(#rg-footer);
                     }
                 }
+                &-facebook:hover {
+                    fill: #3B5998;
+                }
             }
         }
     }
@@ -446,6 +449,9 @@
                     &:hover{
                         fill: url(#rg-footer);
                     }
+                }
+                &-facebook:hover {
+                    fill: #3B5998;
                 }
             }
         }
