--- a/saludconciencia/src/sass/_navbar.scss
+++ b/saludconciencia/src/sass/_navbar.scss
@@ -116,6 +116,9 @@
             &-youtube:hover {
                 fill: red;
             }
+            &-facebook:hover {
+                fill: #3B5998;
+            }
         }
     }
 }
