--- a/saludconciencia/src/sass/_inicio.scss
+++ b/saludconciencia/src/sass/_inicio.scss
@@ -27,11 +27,13 @@
     }
 
     &__figure{
-        flex: 0 0 40%;
+        flex: 0 0 45%;
         width: 100%;
         height: 100%;
         display: flex;
         align-items: center;
+        margin-right: 2rem;
+        
         /* Portrait iPad Pro 12.9"*/
         @media only screen 
         and (min-device-width: 1024px) 
