--- a/saludconciencia/src/sass/_navbar.scss
+++ b/saludconciencia/src/sass/_navbar.scss
@@ -84,6 +84,10 @@
     //Temporal FIX!!
     //flex-wrap: wrap;
 
+    
+    @media screen and (min-width: 992px) {
+        margin-right: 2rem;
+    }
     @media screen and (max-width: 768px) {
         justify-content: space-evenly;
         padding: 2rem;
