--- a/saludconciencia/src/sass/_inicio.scss
+++ b/saludconciencia/src/sass/_inicio.scss
@@ -8,6 +8,20 @@
     overflow-y: scroll;
     //overflow: hidden;
 }
+.index__slide__0{
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
+    height: 100vh;
+    width: 100%;
+
+    //padding-top: 65px;
+    padding: 2rem 0;
+    display: flex;
+    align-items: center;
+
+    margin-bottom: 7%;
+    margin-top: 8%;
+}
 
 .index__slide__1{
     scroll-snap-align: center;
