--- a/saludconciencia/src/sass/_inicio.scss
+++ b/saludconciencia/src/sass/_inicio.scss
@@ -13,14 +13,14 @@
     scroll-snap-stop: always;
     height: 100vh;
     width: 100%;
-
-    //padding-top: 65px;
-    padding: 2rem 0;
+    
     display: flex;
     align-items: center;
 
     margin-bottom: 7%;
-    margin-top: 8%;
+}
+.carousel-root > .carousel > .control-dots{
+    margin-bottom: 2%;
 }
 
 .index__slide__1{
