--- a/saludconciencia/src/sass/_inicio.scss
+++ b/saludconciencia/src/sass/_inicio.scss
@@ -13,9 +13,9 @@
     scroll-snap-stop: always;
     height: 100vh;
     width: 100%;
-    
-    display: flex;
-    align-items: center;
+
+    // display: flex;
+    // align-items: center;
 
     margin-bottom: 7%;
 }
