--- a/saludconciencia/src/sass/_inicio.scss
+++ b/saludconciencia/src/sass/_inicio.scss
@@ -14,8 +14,12 @@
     height: 100vh;
     width: 100%;
 
-    // display: flex;
-    // align-items: center;
+    /* Portrait iPad*/
+    @media only screen and (max-width: 768px){
+        //flex: 0 0 50%;
+        display: flex;
+        align-items: center;
+    }
 
     margin-bottom: 7%;
 }
