--- a/saludconciencia/src/sass/_createUser.scss
+++ b/saludconciencia/src/sass/_createUser.scss
@@ -1,6 +1,19 @@
 .autor__main{
+
+    display: flex;
+    justify-content: space-around;
+
     &__agregar{
         border-top: 1px solid black;
         padding-top: 2rem;
+    }
+}
+
+.autor__main__agregar-bloque{
+    display: flex;
+    justify-content: center;
+
+    & > input {
+        margin-left: 2rem;
     }
 }
