--- a/saludconciencia/src/sass/_blogHeader.scss
+++ b/saludconciencia/src/sass/_blogHeader.scss
@@ -25,7 +25,13 @@
     &__autor {
         margin-top: 2rem;
         display: flex;
+        //flex-direction: column;
+        //justify-content: space-around;
+        justify-content: space-evenly;
         align-items: center;
+        &-item{
+            display: flex;
+        }
         &-img{
             width: 5rem;
             height: auto;
@@ -33,18 +39,19 @@
             border: 1px solid black;
         }
         &__info{
-            margin-left: 2rem;
-            font-size: 1.5rem;
-            &-fecha{
-                color: rgb(117,117,117);
-            }
-
-            &-name > span{
-                //text-transform: uppercase;
-                //font-size: 2rem;
+            &-name{
+                margin-left: 2rem;
+                font-size: 1.5rem;
                 font-weight: 400;
+                
+                display: flex;
+                align-items: center;
             }
         }
+    }
+
+    &__autorUnico {
+        margin-top: 2rem;
     }
 
     &__tags{
@@ -68,5 +75,17 @@
                 background-color: lighten($color-primary-green, 5%);
             }
         }
+    }
+
+    &__fecha{
+        font-size: 1.5rem;
+        color: rgb(117,117,117);
+
+        margin-top: 2rem;
+    }
+
+    &__por{
+        font-size: 1.5rem;
+
     }
 }
