--- a/saludconciencia/src/sass/_blogHeader.scss
+++ b/saludconciencia/src/sass/_blogHeader.scss
@@ -48,6 +48,13 @@
                 align-items: center;
             }
         }
+        /* Portrait iPad*/
+        @media only screen and (max-width: 576px){
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+            gap: 2rem;
+        }
     }
 
     &__autorUnico {
