--- a/saludconciencia/src/sass/_inicio.scss
+++ b/saludconciencia/src/sass/_inicio.scss
@@ -13,15 +13,28 @@
     scroll-snap-stop: always;
     height: 100vh;
     width: 100%;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    & > div {
+        width: 90%;
+        padding-top: 3%;
+    }
+    
     /* Portrait iPad*/
     @media only screen and (max-width: 768px){
         //flex: 0 0 50%;
         display: flex;
         align-items: center;
+        div {
+            width: 100%;
+            padding-top: 0%;
+        }
     }
 
-    margin-bottom: 7%;
+
+    //margin-bottom: 7%;
 }
 .carousel-root > .carousel > .control-dots{
     margin-bottom: 2%;
