--- a/saludconciencia/src/sass/_inicio.scss
+++ b/saludconciencia/src/sass/_inicio.scss
@@ -8,37 +8,10 @@
     overflow-y: scroll;
     //overflow: hidden;
 }
-.index__slide__0{
-    scroll-snap-align: center;
-    scroll-snap-stop: always;
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    & > div {
-        width: 90%;
-        padding-top: 3%;
-    }
-    
-    /* Portrait iPad*/
-    @media only screen and (max-width: 768px){
-        //flex: 0 0 50%;
-        display: flex;
-        align-items: center;
-        div {
-            width: 100%;
-            padding-top: 0%;
-        }
-    }
 
-
-    //margin-bottom: 7%;
-}
-.carousel-root > .carousel > .control-dots{
-    margin-bottom: 2%;
-}
+/*
+* Index 0 en _carouselIndex.scss
+*/
 
 .index__slide__1{
     scroll-snap-align: center;
