--- a/saludconciencia/src/sass/_articulosRecientes.scss
+++ b/saludconciencia/src/sass/_articulosRecientes.scss
@@ -10,7 +10,7 @@
     &__titulo{
         position: relative;
         height: 100%;
-        flex: 1;
+        flex: 0 0 10%;
         &-text{
             font-size: 7.6rem;
             position: absolute;
@@ -53,6 +53,7 @@
         }
     }
 
+    /*
     &__cards{
         flex: 0 0 90%;
         display: flex;
@@ -72,7 +73,7 @@
             @media screen and (max-width: 480px){
                 position: inherit;
             }
-            /* Portrait iPad Pro 12.9"*/
+            // Portrait iPad Pro 12.9"
             @media only screen 
             and (min-device-width: 1024px) 
             and (max-device-width: 1024px) 
@@ -80,7 +81,7 @@
             and (-webkit-min-device-pixel-ratio: 2) {
                 width: 42rem;
             }
-            /* Portrait iPad Pro 10.5"*/
+            // Portrait iPad Pro 10.5"
             @media only screen 
             and (min-device-width: 834px) 
             and (max-device-width: 834px) 
@@ -88,7 +89,7 @@
             and (-webkit-min-device-pixel-ratio: 2) {
                 
             }
-            /* Portrait iPad*/
+            // Portrait iPad
             @media only screen 
             and (min-device-width: 768px) 
             and (max-device-width: 768px) 
@@ -129,7 +130,7 @@
             position: absolute;
             top: 18%;
             left: 5%;
-            /* Portrait iPad Pro 12.9"*/
+            // Portrait iPad Pro 12.9"
             @media only screen 
             and (min-device-width: 1024px) 
             and (max-device-width: 1024px) 
@@ -138,7 +139,7 @@
                 top: 10%;
                 left: 2%;
             }
-            /* Portrait iPad Pro 10.5"*/
+            // Portrait iPad Pro 10.5"
             @media only screen 
             and (min-device-width: 834px) 
             and (max-device-width: 834px) 
@@ -147,7 +148,7 @@
                 top: 10%;
                 left: 5%;
             }
-            /* Portrait iPad*/
+            // Portrait iPad
             @media only screen 
             and (min-device-width: 768px) 
             and (max-device-width: 768px) 
@@ -215,7 +216,7 @@
             position: absolute;
             top: 38%;
             left: 40%;
-            /* Portrait iPad Pro 12.9"*/
+            // Portrait iPad Pro 12.9"
             @media only screen 
             and (min-device-width: 1024px) 
             and (max-device-width: 1024px) 
@@ -224,7 +225,7 @@
                 top: 40%;
                 left: 30%;
             }
-            /* Portrait iPad Pro 10.5"*/
+            // Portrait iPad Pro 10.5"
             @media only screen 
             and (min-device-width: 834px) 
             and (max-device-width: 834px) 
@@ -233,7 +234,7 @@
                 top: 40%;
                 left: 30%;
             }
-            /* Portrait iPad*/
+            // Portrait iPad
             @media only screen 
             and (min-device-width: 768px) 
             and (max-device-width: 768px) 
@@ -301,7 +302,7 @@
             position: absolute;
             top: 58%;
             left: 70%;
-            /* Portrait iPad Pro 12.9"*/
+            //Portrait iPad Pro 12.9"
             @media only screen 
             and (min-device-width: 1024px) 
             and (max-device-width: 1024px) 
@@ -310,7 +311,7 @@
                 top: 70%;
                 left: 50%;
             }
-            /* Portrait iPad Pro 10.5"*/
+            // Portrait iPad Pro 10.5"
             @media only screen 
             and (min-device-width: 834px) 
             and (max-device-width: 834px) 
@@ -319,7 +320,7 @@
                 top: 70%;
                 left: 52%;
             }
-            /* Portrait iPad*/
+            // Portrait iPad
             @media only screen 
             and (min-device-width: 768px) 
             and (max-device-width: 768px) 
@@ -357,6 +358,55 @@
             }
         }
     }
+    */
+
+    &__cards{
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        gap: 3%;
+        //margin: 0 5%;
+        margin-left: 5%;
+        margin-right: 9%;
+        margin-top: 4%;
+        & > div {
+            width: 35rem;
+            //min-height: 25rem;
+        }
+
+        &-card1{
+            //width: 100%;
+            align-self: flex-start;
+
+            & > div > div > h5 {
+                text-align: center;
+                color: $color_text_green;
+                font-size: 1.8rem;
+            }
+        }
+
+        &-card2{
+            align-self: center;
+            & > div > div > h5 {
+                text-align: center;
+                color: $color_text_blue;
+                font-size: 1.8rem;
+            }
+        }
+
+        &-card3{
+            align-self: flex-end;
+            & > div > div > h5 {
+                text-align: center;
+                color: $color_text_dark;
+                font-size: 1.8rem;
+            }
+        }
+    }
+
 }
 
 .card__image{
@@ -364,5 +414,63 @@
 
     &:hover{
         opacity: 1;
+    }
+}
+
+
+//Portrait iPad Pro 12.9"
+@media only screen
+and (min-device-width: 1024px)
+and (max-device-width: 1024px)
+and (orientation: portrait)
+and (-webkit-min-device-pixel-ratio: 2){
+
+}
+//Portrait iPad Pro 10.5"
+@media only screen
+and (min-device-width: 834px)
+and (max-device-width: 834px)
+and (orientation: portrait)
+and (-webkit-min-device-pixel-ratio: 2){
+
+}
+//Portrait iPad
+@media only screen
+and (min-device-width: 768px)
+and (max-device-width: 768px)
+and (orientation: portrait)
+and (-webkit-min-device-pixel-ratio: 2){
+
+}
+
+//iPhone 6/7/8 plus
+@media screen
+and (max-width: 414px)
+and (device-height: 736px){
+
+}
+//Pixel2
+@media screen
+and (max-width: 414px)
+and (device-height: 736px){
+
+}
+
+
+
+
+
+@media only screen and (max-width: 768px){
+    .index__slide__8{
+        &__titulo{
+            flex: 0 0 30%;
+        }
+    }
+    .index__slide__8__cards{
+        margin-top: 0%;
+        & > div {
+            align-self: unset;
+            width: 45vw;
+        }
     }
 }
