--- a/saludconciencia/src/sass/_blogHeader.scss
+++ b/saludconciencia/src/sass/_blogHeader.scss
@@ -45,7 +45,11 @@
                 font-weight: 400;
                 
                 display: flex;
-                align-items: center;
+                flex-direction: column;
+                //align-items: center;
+                & > :last-child(){
+                    gap: 1rem;
+                }
             }
         }
         /* Portrait iPad*/
